# aiogram3_bot_template

./: .env_template  Dockerfile  main.py  pyproject.toml  requirements.txt
bot/: garb.py
bot/commands/: setter.py
bot/config/: cfg.py  format_text_html.py
bot/data/: smiles.py
bot/handlers/: __init__.py  custom.py  default.py
src/bot/: __init__.py
src/bot/commands/: setter.py
src/bot/config/: bot_config.py  redis_connection.py
src/bot/data/: smiles.py
src/bot/filters/: check_role.py
src/bot/handlers/: __init__.py  admins_handlers.py  custom.py  default.py
src/bot/middlewares/: antispam_middleware.py  callback_middleware.py  check_role_middleware.py  scheduler_middleware.py  set_middlewares.py
src/bot/scheduler/: apsched.py
