[tool.poetry]
name = "sarafanka-bot"
version = "0.1.0"
description = ""
authors = ["ilia_volodin <vollodin61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
redis = "^5.0.1"
environs = "^9.5.0"
asyncpg = "^0.29.0"
emoji = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
