[tool.poetry]
name = "aiogram3bottemplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
aioredis = "^2.0.1"
aio-scheduler = "^0.1.0"
apscheduler = "^3.10.4"
apscheduler-di = "^0.1.0"
asyncpg = "^0.29.0"
black = "^24.8.0"
emoji = "^2.12.1"
environs = "^11.0.0"
icecream = "^2.1.3"
loguru = "^0.7.2"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
